# trading_harness

./: .env.runtime.local.example  .gitignore  ARENA_API_DOCUMENTATION_ZH.md  CONTRIBUTING.md  LICENSE  README.md  README_ES.md  README_FR.md  README_JA.md  README_ZH.md  SECURITY.md  SKILLS.md  arena_competition_info  arena_last_transition  arena_market_state  arena_trade  llms.txt  pyproject.toml  run_continuous_agent.sh  run_live_tap_once.sh  run_mcp_server.sh  varsity_tools.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-agent-npm.yml
agent/: DEVELOPMENT.md  README.md  package.json
agent/src/: cli.ts
arena_agent/: __init__.py  __main__.py  runtime_env.py
arena_agent/agents/: action_schema.json  agent_exec_policy.py  codex_policy.py  codex_prompt_template.md  expression_policy.py  policy_factory.py  (+6 more)
docs/: context-engineering.md  expression-engine.md  llm-setup-agent-flow.md  tool-proxy.md
examples/: sdk_quickstart.py
scripts/: generate-diagrams.ts
tests/: test_agent_exec_policy.py  test_codex_policy.py  test_dynamic_indicators.py  test_environment_adapter.py  test_executor_reward.py  test_features.py  test_mcp_tools.py  test_monitor_cli.py  test_observability.py  test_policies_and_runtime.py  test_run_cli.py  test_runtime_env.py  test_runtime_safety.py  test_sdk.py  test_setup_agent_codex_mcp.py  test_setup_agent_parser.py  test_setup_context_builder.py  test_setup_decide_inactivity.py  test_skills.py  test_state_builder.py  test_strategy.py  test_tap_policy.py
(+84 files in other folders)
