[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arena-agent-runtime"
version = "0.2.0"
description = "Arena trading agent runtime for Varsity Arena"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Varsity Tech"}]
keywords = ["trading", "agent", "ai", "mcp", "arena", "talib", "indicators"]

dependencies = [
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "numpy>=2.0.0",
  "TA-Lib>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/varsity-tech-product/arena"
Repository = "https://github.com/varsity-tech-product/arena"
Issues = "https://github.com/varsity-tech-product/arena/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.12.0"]
monitor = [
  "textual>=0.79.0",
  "rich>=13.7.0",
]
full = [
  "mcp>=1.12.0",
  "textual>=0.79.0",
  "rich>=13.7.0",
]

[project.scripts]
arena-agent-runtime = "arena_agent.__main__:main"
arena-agent-monitor = "arena_agent.tui.__main__:main"
arena-agent-mcp = "arena_agent.mcp.server:main"

[tool.setuptools]
py-modules = ["varsity_tools"]

[tool.setuptools.packages.find]
include = ["arena_agent*"]

[tool.setuptools.package-data]
arena_agent = [
  "agents/*.json",
  "agents/*.md",
  "config/*.yaml",
]
